update for frontend

--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
                   </p>
 
                   <p>
-                    click on the <img class="topIcon introIcon" 
+                    click on the <img class="introIcon" 
                    src="./assets/images/github.jpg"
-                    /> icon to view the code on github and click on the <img class="topIcon introIcon" 
+                    /> icon to view the code on github and click on the <img class="introIcon" 
                     src="./assets/images/play.png" 
                     /> icon to open the project.
                   </p>
