added certification info

--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
         <div class="text-center">
           <h1>I am Priyojit Chatterjee</h1>
           <p>Developer</p>
+          <p><img class="cert" 
+            src="./assets/images/cert.png" onClick="window.open('https://www.youracclaim.com/badges/e19ac6cf-4ec2-487e-b4e7-bd5bdac5704e')"
+             /></p>
           <p>
             You can reach me at <br>priyojit.chatterjee333@gmail.com
           </p>
@@ -57,14 +60,14 @@
                 <h2>About me</h2>
                 <div class="row desc">
                   <div class="col-md-4">
-                    <p><img src="./assets/images/img-01.jpg" class="img-responsive profilePic" alt=""></p>
+                    <p><img src="./assets/images/img-01.jpg" class="img-responsive profilePic" alt=""/></p>
                   </div>
                   <div class="col-md-8">
       
                   <p>
                     I am looking for a developer Role. I have awareness of
-                    both React and java. Feel free to checkout my demo
-                    Projects. They are built using React in the frontend and
+                    both React and Java. I also have an <a onClick="window.open('https://www.youracclaim.com/badges/e19ac6cf-4ec2-487e-b4e7-bd5bdac5704e')">OCAJP certification</a>. Feel free to checkout my demo
+                    projects. They are built using React in the frontend and
                     spring boot in the backend with postgres as the database.
                   </p>
 
@@ -248,7 +251,7 @@
                   </div>
                   <div class="col-md-6">
                     <div class="education-experience">
-                      <small class="date">2013-2010</small>
+                      <small class="date">2010-2013</small>
                       <h3 class="h5 date-title">
                         Bachelor of Computer Applications
                       </h3>
