new pic and etrans work experience

--- a/index.html
+++ b/index.html
@@ -65,8 +65,9 @@
                   <div class="col-md-8">
       
                   <p>
-                    I am looking for a developer Role. I have awareness of
-                    both React and Java. I also have an <a onClick="window.open('https://www.youracclaim.com/badges/e19ac6cf-4ec2-487e-b4e7-bd5bdac5704e')">OCAJP certification</a>. Feel free to checkout my demo
+                    I am looking for a FullStack developer Role. I have awareness of
+                    both React and Spring boot Microservices architecture.I have also worked with docker and docker compose.
+                    I also have an <a onClick="window.open('https://www.youracclaim.com/badges/e19ac6cf-4ec2-487e-b4e7-bd5bdac5704e')">OCAJP certification</a>. Feel free to checkout my demo
                     projects. They are built using React in the frontend and
                     spring boot in the backend with postgres as the database.
                   </p>
@@ -216,21 +217,41 @@
 
             <div class="card">
               <div class="card-block">
-                <h2>Work</h2>
+                <h2>Work Highlights</h2>
+
                 <div class="work-experience">
-                  <small class="date">2016-Present</small>
+                  <small class="date">Dec 2020 - Present</small>
                   <h3 class="h5 date-title">
-                    Systems Engineer -
-                    <a
-                      href="http://en.orson.io"
-                      title="Create professionnal website"
-                      >Tata Consultancy Services</a
-                    >
+                    Sr Developer - eTrans Solutions Pvt Ltd
                   </h3>
 
                   <p>
-                    Performed automation testing of the backend application of a
-                    major bank.
+                    • Developed scalable <b>Microservice architecture based framework</b> from scratch using <b>spring cloud API Gateway</b> and <b>Spring cloud Eureka Discovery Service</b></br>
+                    • Implemented <b>authentication</b> microservice based on <b>JWT refresh token</b> concept with defined expiration time for both refresh token and auth token</br>
+                    • Implemented <b>config microservice</b> using <b>spring cloud bus</b> and <b>RabbitMQ</b> which <b>provides all properties from centralized git repository</b> and can reset
+                    app properties without restarting any microservices</br>
+                    • used <b>docker</b> and <b>docker-compose</b> to create production ready deployments</br>
+                    • implemented <b>authorization</b> for each microservice controller using JWT token to securely pass claims data</br>
+                    • Implemented <b>monthly rolling log file generation using Log4j and log4j.xml</b> in all microservices and made <b>log aggregation</b> easier using
+                    <b>ElasticSearch, LogStash and Kibana</b></br>
+                    • Implemented <b>scheduling</b> and inter spring boot application communication using <b>RestTemplate</b></br>
+                    • Worked on multiple spring boot applications to develop REST endpoints and maintained multiple legacy spring boot applications</br>
+                    • Created <b>React Redux</b> framework from scratch with <b>automatic logout on token expiration</b></br>
+                    • Used <b>Redux-saga</b> for interepting actions, <b>redux-persist</b> to rehidrate the redux store from localstorage, <b>datatable.net-dt</b> for implementing different types of datatables like infinite scroll tables and paginated tables, <b>axios</b> to send and intercept requests and responses, <b>connect</b> to implement
+                    <b>mapStateToProps and mapDispatchToProps</b></br>
+                    • Created multiple class based components and some function based components to utilize <b>useState and useEffect hooks</b> </br>
+                  </p>
+                </div>
+                <div class="work-experience">
+                  <small class="date">Oct 2016 - Oct 2020</small>
+                  <h3 class="h5 date-title">
+                    Systems Engineer - Tata Consultancy Services
+                  </h3>
+
+                  <p>
+                    • Built new API's as additions to existing application</br>
+                    • Refactored legacy code of existing modules</br>
+                    • Developed class based react components </br>
                   </p>
                 </div>
               </div>
@@ -288,29 +309,7 @@
         </div>
       </div>
     </main>
-    <footer class="footer-container white-text-container text-center">
-      <div class="container">
-        <div class="row">
-          <div class="col-xs-12">
-            <p><img src="./assets/images/mashup-icon.svg" alt="" /></p>
-
-            <p>
-              ©All right reserved. Design
-              <a
-                href="http://www.mashup-template.com/"
-                title="Create website with free html template"
-                >Mashup Template</a
-              >/<a href="https://unsplash.com/" title="Beautiful Free Images"
-                >Unsplash</a
-              >
-            </p>
-            <p>
-              
-            </p>
-          </div>
-        </div>
-      </div>
-    </footer>
+   
 
     <script>
       document.addEventListener("DOMContentLoaded", function(event) {
